src/formatter/snapshots/camello__formatter__tests__comment_formatting.pl.snap
---
source: src/formatter/tests.rs
expression: formatted
---
# Single line comment
# Another comment
sub foo {
    my $x; # inline comment
}

# Comment before sub
sub bar {

    # Comment inside sub
    my $y = 1;

    # Another comment
    my $z = 2;
}

# Multiple
# consecutive
# comments
my $var = 1;
