src/formatter/snapshots/camello__formatter__tests__comment_ownership.pl.snap
---
source: src/formatter/tests.rs
assertion_line: 51
expression: formatted
---
my $x = 1; # inline comment

# leading doc

# continues

sub foo {
    say $x;
}

my $y = 2; # trailing comment

# comment after newline

# and another

say $y;
