src/formatter/snapshots/camello__formatter__tests__compound_assignment_alignment.pl.snap
---
source: src/formatter/tests.rs
expression: formatted
---
sub compound_alignment {
    my $simple = 1;
    my $or   ||= 2;
    my $sum   += 3;
    $flag  &&= check();
    $concat .= value();
}
