src/formatter/snapshots/camello__formatter__tests__compound_assignment_alignment_disabled.snap
---
source: src/formatter/tests.rs
assertion_line: 64
expression: formatted
---
sub compound_alignment {
    my $simple = 1;
    my $or ||= 2;
    my $sum += 3;
    $flag &&= check();
    $concat .= value();
}
