src/formatter/snapshots/camello__formatter__tests__fat_comma_alignment.pl.snap
---
source: src/formatter/tests.rs
assertion_line: 51
expression: formatted
---
use constant ABC => 1;    # comment
use constant D   => 'a';

use constant A   => 1;
use constant FOO => 99;

use Module (
    X   => 1,
    YYY => 2,
);

func(
    a   => 1,
    bbb => 2,
);

func
    a   => 1,
    bbb => 2;
