src/formatter/snapshots/camello__formatter__tests__fat_comma_alignment_hashref.pl.snap
---
source: src/formatter/tests.rs
assertion_line: 51
expression: formatted
---
my $h = +{
    aaa => { xyz => '' },
    b   => { x   => '' },
};
