src/formatter/snapshots/camello__formatter__tests__fat_comma_alignment_nested.pl.snap
---
source: src/formatter/tests.rs
assertion_line: 51
expression: formatted
---
sub nested_fat_commas {
    HTTP::Response->new(
        code    => 401,
        message => 'Authorization required',
        headers => {
            Content_Type => 'text/plain',
        },
    );

    my %hash = (
        first  => 1,
        second => {
            inner_key => 2,
        },
        third => 3,
    );
}
