src/formatter/snapshots/camello__formatter__tests__given_when_basic.pl.snap
---
source: src/formatter/tests.rs
expression: formatted
---
given ($var) {

    when (/^foo/) {
        say "starts with foo";
    }
    when (/^bar/) {
        say "starts with bar";
    }
    default {
        say "default case";
    }
}
