src/formatter/snapshots/camello__formatter__tests__heredoc.pl.snap
---
source: src/formatter/tests.rs
expression: formatted
---
# Basic heredoc

sub f { die <<__DIE__
foo
__DIE__
 }

# Heredoc in nested context

sub g {
    if (1) {
        print <<EOF;
Hello, World!
This is a heredoc.
EOF
    }
}

# Multiple heredocs

sub h {
    my $x = <<'END';
First heredoc
END
    my $y = <<END;
Second heredoc
END
}

# Heredoc with statement modifier

print <<EOF if $debug;
Debug output
EOF
