src/formatter/snapshots/camello__formatter__tests__heredoc_and_package.pl.snap
---
source: src/formatter/tests.rs
assertion_line: 51
expression: formatted
---
my $str = <<EOF;
hello
EOF
my $empty = <<EOF;
EOF
die <<DIE;

This is
  dying message!

DIE
    if ($some_var) {
    print <<~EOF;
        This is a here-doc
        EOF
}

package Foo::Bar {
    my $x = 1;
}
package Foo::Bar 1.23;
package My::Module 0.01;
package Test 2.5;
package Foo::Bar v5.36.0;
package Foo::Bar::Baz {
    print "hi";
}
package Foo::123ABC {
    my $x = 1;
}
package Foo::123 1.0;
package Bar::456 v2.0.0 { }
package Foo::123ABC v1.0.0;
package Foo::123::Bar::789;
package A::1::B::2::C::3;
package A::123ABC::B::456DEF;

package Foo {
    our $VERSION = '0.01';
}

func({}
);

my $str_quote = q{string};

my $hash  = { a => 1, b => 2 };
my $array = [ 1, 2, 3 ];

($a
    ? [
]
    : {});

($foo || $bar) && ($x // $y);

BEGIN { }

CHECK { }

INIT { }

END { }

sub attr_test : bar : baz { }

sub attr_args : bar(1,2) { }
